--- a/app/static/page.html
+++ b/app/static/page.html
@@ -28,7 +28,7 @@
             max-width: 500px;
             max-height: 500px;
             height: 100vw; /* Initial height */
-            background-image: url('https://images.unsplash.com/photo-1544005313-94ddf0286df2?q=80&w=3176&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background-image: url('https://cdn.connectflow.app/prod/ACCOUNTbFWmHUDx/PI-ACCT-bFWmHUDx-1733309614132.jpg');
             background-size: cover;
             background-position: center;
             z-index: -1;
@@ -77,12 +77,33 @@
 
         }
 
+
+        .logo-icon{
+            display: flex;
+            width: 100%;
+            justify-content: flex-end;
+            align-items: center;
+        }
+        .logo-icon-image{
+            width: 75px;
+            height: 75px;
+            border-radius: 100%;
+            margin-top: calc(-75px / 2);
+            position: absolute;
+            margin-right: 35px;
+        
+        }
+
     </style>
 </head>
 <body>
 
     <div class="background-container">
         <div class="background-image"></div>
+    </div>
+
+    <div class="logo-icon">
+        <img class="logo-icon-image" src="https://cdn.connectflow.app/prod/ACCOUNTmzkhUPTl/Frame%20587.jpg" alt="">
     </div>
 
     <div class="content">
